syntax = "proto3";

package pluginproto;

option go_package = "./;pluginproto";

// 插件信息 / Plugin Information
message PluginInfo {
  // 插件唯一编号 / Plugin unique number
  string no = 1;
  // 插件名称 / Plugin name
  string name = 2;
  // 插件拥有的方法 / Methods owned by plugin
  repeated string methods = 3;
  // 插件版本 / Plugin version
  string version = 4;
  // 插件优先级, 数字越大优先级越高 / Plugin priority, higher number means
  // higher priority
  int32 priority = 5;
  // PersistAfter方法是否同步调用 / Whether PersistAfter method is called
  // synchronously
  bool persistAfterSync = 6;
  // Reply方法是否同步调用 / Whether Reply method is called synchronously
  bool replySync = 7;
  // 插件配置模版 / Plugin configuration template
  ConfigTemplate configTemplate = 8;
}

message Field {
  string name = 1;
  string type = 2;
  string label = 3;
}

message ConfigTemplate { repeated Field fields = 1; }

// 插件启动返回 / Plugin startup response
message StartupResp {
  // 节点id / Node id
  uint64 nodeId = 1;
  // 是否成功 / Whether successful
  bool success = 2;
  // 错误信息 / Error message
  string errMsg = 3;
  // 沙盒路径 / Sandbox directory
  string sandboxDir = 4;
  // 配置 / Configuration
  bytes config = 5;
}

// 连接信息 / Connection information
message Conn {
  // 用户uid / User uid
  string uid = 1;
  // 连接id / Connection id
  int64 connId = 2;
  // 设备id / Device id
  string deviceId = 3;
  // 设备标志 / Device flag
  uint32 deviceFlag = 4;
  // 设备等级 / Device level
  uint32 deviceLevel = 5;
}

// 发送包 / Send packet
message SendPacket {
  // 发送者 / Sender
  string fromUid = 1;
  // 接收频道 / Receive channel
  string channelId = 2;
  // 频道类型 / Channel type
  uint32 channelType = 3;
  // 消息内容 / Message content
  bytes payload = 4;
  // 错误原因（默认为成功）/ Error reason (default is success)
  uint32 reason = 5;
  // 发送者的连接 / Sender's connection
  Conn conn = 6;
}

// 接收包 / Receive packet
message RecvPacket {
  // 发送者 / Sender
  string fromUid = 1;
  // 接受者 / Receiver
  string toUid = 2;
  // 接收频道 / Receive channel
  string channelId = 3;
  // 频道类型 / Channel type
  uint32 channelType = 4;
  // 消息内容 / Message content
  bytes payload = 5;
}

// 消息 / Message
message Message {
  // 消息唯一id（全局唯一）/ Message unique id (globally unique)
  int64 messageId = 1;
  // 消息序号（频道内严格递增）/ Message sequence number (strictly increasing
  // within channel)
  uint64 messageSeq = 2;
  // 客户端消息编号 / Client message number
  string clientMsgNo = 3;
  // 流编号 / Stream number
  string streamNo = 4;
  // 流序号 / Stream sequence
  uint64 streamId = 5;
  // 消息时间戳 / Message timestamp
  uint32 timestamp = 6;
  // 发送者 / Sender
  string from = 7;
  // 接收频道 / Receive channel
  string channelId = 8;
  // 频道类型 / Channel type
  uint32 channelType = 9;
  // topic
  string topic = 10;
  // 消息内容 / Message content
  bytes payload = 11;
}

message MessageBatch { repeated Message messages = 1; }

// http请求 / HTTP request
message HttpRequest {
  // 请求方法 / Request method
  string method = 1;
  // 请求路径 / Request path
  string path = 2;
  // 请求头 / Request headers
  map<string, string> headers = 3;
  // 查询参数 / Query parameters
  map<string, string> query = 4;
  // 请求体 / Request body
  bytes body = 5;
}

// http响应 / HTTP response
message HttpResponse {
  // 状态码 / Status code
  int32 status = 1;
  // 响应头 / Response headers
  map<string, string> headers = 2;
  // 响应体 / Response body
  bytes body = 3;
}

// 频道消息请求 / Channel message request
message ChannelMessageReq {
  // 频道id / Channel id
  string channelId = 1;
  // 频道类型 / Channel type
  uint32 channelType = 2;
  // 消息开始序号 / Start message sequence
  uint64 startMessageSeq = 3;
  // 查询数量，默认100 / Query limit, default 100
  uint32 limit = 4;
}

message ChannelMessageBatchReq {
  repeated ChannelMessageReq channelMessageReqs = 1;
}

// 频道消息响应 / Channel message response
message ChannelMessageResp {
  // 频道id / Channel id
  string channelId = 1;
  // 频道类型 / Channel type
  uint32 channelType = 2;
  // 消息开始序号 / Start message sequence
  uint64 startMessageSeq = 3;
  // 查询数量，默认100 / Query limit, default 100
  uint32 limit = 4;
  // 消息列表 / Message list
  repeated Message messages = 5;
}

message ChannelMessageBatchResp {
  repeated ChannelMessageResp channelMessageResps = 1;
}

// wukongim的分布式配置 / WuKongIM distributed configuration
message ClusterConfig {
  // 分布式中的节点 / Nodes in distributed system
  repeated Node nodes = 1;
  // 分布式中的槽位 / Slots in distributed system
  repeated Slot slots = 2;
}

// wk节点 / WK node
message Node {
  // 节点id / Node id
  uint64 id = 1;
  // 节点分布式通讯地址 / Node distributed communication address
  string clusterAddr = 2;
  // 节点api服务地址 / Node API service address
  string apiServerAddr = 3;
  // 是否在线 / Whether online
  bool online = 4;
}

// wk的slot / WK slot
message Slot {
  // 槽位id / Slot id
  uint32 id = 1;
  // 槽位的领导节点 / Slot leader node
  uint64 leader = 2;
  // 槽位的领导任期 / Slot leader term
  uint32 term = 3;
  // 副本节点(包含领导节点) / Replica nodes (including leader)
  repeated uint64 replicas = 4;
}

// 频道对象 / Channel object
message Channel {
  // 频道id / Channel id
  string channelId = 1;
  // 频道类型 / Channel type
  uint32 channelType = 2;
}

// 频道节点请求 / Channel node request
message ClusterChannelBelongNodeReq {
  // 频道列表 / Channel list
  repeated Channel channels = 1;
}

// 频道节点响应 / Channel node response
message ClusterChannelBelongNodeResp {
  // 频道节点Id / Channel node Id
  uint64 nodeId = 1;
  // 频道列表 / Channel list
  repeated Channel channels = 2;
}

// 频道节点批量响应 / Channel node batch response
message ClusterChannelBelongNodeBatchResp {
  repeated ClusterChannelBelongNodeResp clusterChannelBelongNodeResps = 1;
}

// http请求转发 / HTTP request forwarding
message ForwardHttpReq {
  // 插件编号 / Plugin number
  string pluginNo = 1;
  // 目标节点id,如果为0则表示本节点,-1为所有节点 / Target node id, 0 means this
  // node, -1 means all nodes
  int64 toNodeId = 2;
  // 请求 / Request
  HttpRequest request = 3;
}

// 最近会话频道请求 / Recent conversation channel request
message ConversationChannelReq {
  // 用户uid / User uid
  string uid = 1;
}

// 最近会话频道响应 / Recent conversation channel response
message ConversationChannelResp {
  // 频道列表 / Channel list
  repeated Channel channels = 1;
}

message Header {
  // 是否持久化 / Whether to persist
  bool noPersist = 1;
  // 是否红点 / Whether red dot
  bool redDot = 2;
  // 是否同步一次 / Whether sync once
  bool syncOnce = 3;
}

// 流基本信息 / Stream basic information
message Stream {
  // 头部 / Header
  Header header = 1;
  // 客户端消息编号（相同编号，客户端只会显示一条，可以为空）/ Client message
  // number (same number, client will only show one, can be empty)
  string clientMsgNo = 2;
  // 发送者uid / Sender uid
  string fromUid = 3;
  // 频道id / Channel id
  string channelId = 4;
  // 频道类型 / Channel type
  uint32 channelType = 5;
  // 消息内容 / Message content
  bytes payload = 6;
}

// 流开启结果 / Stream open response
message StreamOpenResp {
  // 流编号 / Stream number
  string streamNo = 1;
}

// 流关闭请求 / Stream close request
message StreamCloseReq {
  // 流编号 / Stream number
  string streamNo = 1;
  // 频道id / Channel id
  string channelId = 2;
  // 频道类型 / Channel type
  uint32 channelType = 3;
}

// 流写入请求 / Stream write request
message StreamWriteReq {
  // 头部 / Header
  Header header = 1;
  // 流编号 / Stream number
  string streamNo = 2;
  // 客户端消息编号（相同编号，客户端只会显示一条，可以为空）/ Client message
  // number (same number, client will only show one, can be empty)
  string clientMsgNo = 3;
  // 发送者uid / Sender uid
  string fromUid = 4;
  // 频道id / Channel id
  string channelId = 5;
  // 频道类型 / Channel type
  uint32 channelType = 6;
  // 消息内容 / Message content
  bytes payload = 7;
}

// 流写入结果 / Stream write response
message StreamWriteResp {
  // 消息唯一id（全局唯一）/ Message unique id (globally unique)
  int64 messageId = 1;
  // 客户端消息编号 / Client message number
  string clientMsgNo = 2;
}

// 发送消息请求 / Send message request
message SendReq {
  // 头部 / Header
  Header header = 1;
  // 客户端消息编号（相同编号，客户端只会显示一条，可以为空）/ Client message
  // number (same number, client will only show one, can be empty)
  string clientMsgNo = 2;
  // 发送者 / Sender
  string fromUid = 3;
  // 频道id / Channel id
  string channelId = 4;
  // 频道类型 / Channel type
  uint32 channelType = 5;
  // 消息内容 / Message content
  bytes payload = 6;
}

// 发送消息响应 / Send message response
message SendResp {
  // 消息唯一id（全局唯一）/ Message unique id (globally unique)
  int64 messageId = 1;
}

// 空响应 / Empty response
message Empty {}

// 插件服务 / Plugin Service
// 注意：WuKongIM 的插件服务通常由插件实现，服务器调用插件的方法
// Note: WuKongIM's plugin service is usually implemented by plugins, and the
// server calls plugin methods
service PluginService {
  // 插件启动 / Plugin startup
  rpc Startup(PluginInfo) returns (StartupResp);

  // 处理发送包（消息发送前）/ Handle send packet (before message sent)
  rpc OnSendPacket(SendPacket) returns (SendPacket);

  // 处理接收包（消息接收后）/ Handle receive packet (after message received)
  rpc OnRecvPacket(RecvPacket) returns (RecvPacket);

  // 处理消息持久化后 / Handle after message persisted
  rpc OnPersistAfter(Message) returns (Message);

  // 处理回复消息 / Handle reply message
  rpc OnReply(Message) returns (Message);

  // 处理HTTP请求 / Handle HTTP request
  rpc HttpRequest(ForwardHttpReq) returns (HttpResponse);

  // 获取频道消息 / Get channel messages
  rpc ChannelMessage(ChannelMessageReq) returns (ChannelMessageResp);

  // 批量获取频道消息 / Batch get channel messages
  rpc ChannelMessageBatch(ChannelMessageBatchReq)
      returns (ChannelMessageBatchResp);

  // 获取频道所属节点 / Get channel belonging node
  rpc ClusterChannelBelongNode(ClusterChannelBelongNodeReq)
      returns (ClusterChannelBelongNodeResp);

  // 批量获取频道所属节点 / Batch get channel belonging nodes
  rpc ClusterChannelBelongNodeBatch(ClusterChannelBelongNodeReq)
      returns (ClusterChannelBelongNodeBatchResp);

  // 获取最近会话频道 / Get recent conversation channels
  rpc ConversationChannel(ConversationChannelReq)
      returns (ConversationChannelResp);

  // 开启流 / Open stream
  rpc StreamOpen(Stream) returns (StreamOpenResp);

  // 关闭流 / Close stream
  rpc StreamClose(StreamCloseReq) returns (Empty);

  // 写入流 / Write stream
  rpc StreamWrite(StreamWriteReq) returns (StreamWriteResp);

  // 发送消息 / Send message
  rpc Send(SendReq) returns (SendResp);
}
