//! æ’ä»¶å¼€å‘å·¥å…·åŒ… / Plugin Development Kit (PDK)

use anyhow::Result;
use clap::Parser;
use serde::de::DeserializeOwned;
pub use serde_json::{json, Value};
use tracing::info;

use super::client::{PluginClient, PluginHandler};

// é‡æ–°å¯¼å‡ºäº‹ä»¶ç›‘å¬å™¨ / Re-export event listeners
pub use super::events::{AuthEventListener, StorageEventListener};

/// æ’ä»¶ä¸Šä¸‹æ–‡ / Plugin context
///
/// ç±»ä¼¼ Go çš„ pdk.Contextï¼Œæä¾›æ¶ˆæ¯å¤„ç†çš„ä¸Šä¸‹æ–‡ä¿¡æ¯
/// Similar to Go's pdk.Context, provides context for message handling
pub struct Context {
    /// äº‹ä»¶ç±»å‹ / Event type
    pub event_type: String,
    /// åŸå§‹è½½è· / Raw payload
    pub payload: Value,
    /// å“åº”æ•°æ® / Response data
    response: Option<Value>,
}

impl Context {
    /// åˆ›å»ºæ–°çš„ä¸Šä¸‹æ–‡ / Create new context
    pub fn new(event_type: &str, payload: &Value) -> Self {
        Self {
            event_type: event_type.to_string(),
            payload: payload.clone(),
            response: None,
        }
    }

    /// è·å–äº‹ä»¶ç±»å‹ / Get event type
    pub fn event_type(&self) -> &str {
        &self.event_type
    }

    /// è·å–è½½è·ä¸­çš„å­—ç¬¦ä¸²å­—æ®µ / Get string field from payload
    pub fn get_payload_str(&self, key: &str) -> Option<&str> {
        self.payload.get(key).and_then(|v| v.as_str())
    }

    /// è·å–è½½è·ä¸­çš„æ•´æ•°å­—æ®µ / Get integer field from payload
    pub fn get_payload_i64(&self, key: &str) -> Option<i64> {
        self.payload.get(key).and_then(|v| v.as_i64())
    }

    /// è·å–è½½è·ä¸­çš„å¸ƒå°”å­—æ®µ / Get boolean field from payload
    pub fn get_payload_bool(&self, key: &str) -> Option<bool> {
        self.payload.get(key).and_then(|v| v.as_bool())
    }

    /// è·å–è½½è·ä¸­çš„å¯¹è±¡å­—æ®µ / Get object field from payload
    pub fn get_payload_object(&self, key: &str) -> Option<&serde_json::Map<String, Value>> {
        self.payload.get(key).and_then(|v| v.as_object())
    }

    /// è·å–è½½è·ä¸­çš„æ•°ç»„å­—æ®µ / Get array field from payload
    pub fn get_payload_array(&self, key: &str) -> Option<&Vec<Value>> {
        self.payload.get(key).and_then(|v| v.as_array())
    }

    /// ååºåˆ—åŒ–è½½è·ä¸ºæŒ‡å®šç±»å‹ / Deserialize payload to specified type
    pub fn parse_payload<T: DeserializeOwned>(&self) -> Result<T> {
        serde_json::from_value(self.payload.clone()).map_err(Into::into)
    }

    /// å›å¤æ¶ˆæ¯
    pub fn reply(&mut self, data: Value) -> Result<()> {
        self.response = Some(json!({
            "status": "ok",
            "data": data
        }));
        Ok(())
    }

    /// å›å¤é”™è¯¯ / Reply with error
    pub fn reply_error(&mut self, message: &str) -> Result<()> {
        self.response = Some(json!({
            "status": "error",
            "message": message
        }));
        Ok(())
    }

    /// è·å–å“åº” / Get response
    pub(crate) fn take_response(&mut self) -> Value {
        self.response.take().unwrap_or(json!({ "status": "ok" }))
    }
}

/// æ’ä»¶ trait / Plugin trait
///
/// ç±»ä¼¼ Go çš„æ’ä»¶æ¥å£ï¼Œå®ç°æ­¤ trait æ¥åˆ›å»ºæ’ä»¶
/// Similar to Go's plugin interface, implement this trait to create a plugin
pub trait Plugin: Sized {
    /// é…ç½®ç±»å‹ / Config type
    type Config: Default + DeserializeOwned;

    /// åˆ›å»ºæ’ä»¶å®ä¾‹ / Create plugin instance
    fn new() -> Self;

    /// è·å–é…ç½®å¼•ç”¨ï¼ˆå¯é€‰å®ç°ï¼‰/ Get config reference (optional)
    fn config(&self) -> Option<&Self::Config> {
        None
    }

    /// è·å–å¯å˜é…ç½®å¼•ç”¨ï¼ˆå¯é€‰å®ç°ï¼‰/ Get mutable config reference (optional)
    fn config_mut(&mut self) -> Option<&mut Self::Config> {
        None
    }

    /// æ”¶åˆ°æ¶ˆæ¯æ—¶è°ƒç”¨ï¼ˆç±»ä¼¼ Go çš„ Receive æ–¹æ³•ï¼‰/ Called when message received (like Go's Receive)
    fn receive(&mut self, ctx: &mut Context) -> Result<()>;

    /// æ’ä»¶å¯åŠ¨æ—¶è°ƒç”¨ï¼ˆå¯é€‰ï¼‰/ Called on plugin start (optional)
    fn on_start(&mut self) -> Result<()> {
        Ok(())
    }

    /// æ’ä»¶åœæ­¢æ—¶è°ƒç”¨ï¼ˆå¯é€‰ï¼‰/ Called on plugin stop (optional)
    fn on_stop(&mut self) -> Result<()> {
        Ok(())
    }

    /// é…ç½®æ›´æ–°æ—¶è°ƒç”¨ï¼ˆå¯é€‰ï¼‰/ Called when config updates (optional)
    fn on_config_update(&mut self, _config: Self::Config) -> Result<()> {
        Ok(())
    }
}

/// æ’ä»¶åŒ…è£…å™¨ï¼Œå°† Plugin trait é€‚é…åˆ° PluginHandler
/// Plugin wrapper, adapts Plugin trait to PluginHandler
struct PluginWrapper<P: Plugin> {
    plugin: P,
    name: &'static str,
    version: &'static str,
    priority: i32,
    capabilities: Vec<String>,
    protocol: crate::plugin::protocol::ProtocolFormat,
}

impl<P: Plugin> PluginHandler for PluginWrapper<P> {
    fn name(&self) -> &'static str {
        self.name
    }

    fn version(&self) -> &'static str {
        self.version
    }

    fn capabilities(&self) -> Vec<String> {
        // ä»é…ç½®æ–‡ä»¶è¯»å–çš„èƒ½åŠ›åˆ—è¡¨ / Capabilities list read from config file
        self.capabilities.clone()
    }

    fn priority(&self) -> i32 {
        self.priority
    }

    fn config(&mut self, cfg: &str) -> Result<()> {
        if !cfg.is_empty() {
            if let Ok(value) = serde_json::from_str::<Value>(cfg) {
                if let Ok(config) = serde_json::from_value::<P::Config>(value) {
                    self.plugin.on_config_update(config)?;
                }
            }
        }
        Ok(())
    }

    fn on_event(
        &mut self,
        event: &crate::plugin::protocol::EventMessage,
    ) -> Result<crate::plugin::protocol::EventResponse> {
        // ä» payload è§£æä¸º JSON Valueï¼ˆä¸´æ—¶å…¼å®¹ï¼‰
        let payload: Value = if event.payload.is_empty() {
            Value::Null
        } else {
            serde_json::from_slice(&event.payload)?
        };

        let mut ctx = Context::new(&event.event_type, &payload);
        self.plugin.receive(&mut ctx)?;
        let response_data = ctx.take_response();

        // æ„å»º EventResponse
        Ok(crate::plugin::protocol::EventResponse {
            status: "ok".to_string(),
            flow: "continue".to_string(),
            data: serde_json::to_vec(&response_data)?,
            error: String::new(),
        })
    }

    // ä½¿ç”¨é…ç½®æ–‡ä»¶ä¸­æŒ‡å®šçš„åè®® / Use protocol specified in config file
    fn protocol(&self) -> crate::plugin::protocol::ProtocolFormat {
        self.protocol
    }
}

/// å‘½ä»¤è¡Œå‚æ•° / CLI arguments
#[derive(Parser, Debug)]
#[command(about = "v-connect-im plugin")]
struct PluginArgs {
    /// Unix Socket è·¯å¾„ / Unix Socket path
    #[arg(long)]
    socket: Option<String>,

    /// å¯ç”¨ debug æ¨¡å¼ / Enable debug mode
    #[arg(long, short = 'd')]
    debug: bool,

    /// æ—¥å¿—çº§åˆ« / Log level (trace, debug, info, warn, error)
    #[arg(long, default_value = "info")]
    log_level: String,
}

/// æ’ä»¶é…ç½® / Plugin configuration
#[derive(serde::Deserialize)]
struct PluginConfig {
    plugin_no: String,
    version: String,
    priority: i32,
    #[serde(default)]
    capabilities: Vec<String>,
}

/// è¿è¡Œæ’ä»¶æœåŠ¡å™¨ / Run plugin server
///
/// è¿™æ˜¯æ’ä»¶çš„ä¸»å…¥å£å‡½æ•°ï¼Œè´Ÿè´£ï¼š
/// This is the main entry function for plugins, responsible for:
///
/// 1. è¯»å– plugin.json é…ç½® / Read plugin.json configuration
/// 2. è§£æå‘½ä»¤è¡Œå‚æ•° / Parse command line arguments
/// 3. åˆå§‹åŒ–æ—¥å¿—ç³»ç»Ÿ / Initialize logging system
/// 4. åˆ›å»ºå¹¶å¯åŠ¨æ’ä»¶å®¢æˆ·ç«¯ / Create and start plugin client
/// 5. å¤„ç†ä¼˜é›…å…³é—­ / Handle graceful shutdown
///
/// # ç±»å‹å‚æ•° / Type Parameters
///
/// * `P` - å®ç°äº† `Plugin` trait çš„æ’ä»¶ç±»å‹ / Plugin type that implements the `Plugin` trait
///
/// # ç¤ºä¾‹ / Example
///
/// ```no_run
/// use v::plugin::pdk::{Plugin, run_server};
///
/// struct AIExample;
///
/// impl Plugin for AIExample {
///     // ... implementation
/// }
///
/// #[tokio::main]
/// async fn main() -> anyhow::Result<()> {
///     run_server::<AIExample>().await
/// }
/// ```
pub async fn run_server<P: Plugin>() -> Result<()> {
    // è¯»å– plugin.json é…ç½® / Read plugin.json configuration
    let config_path = std::env::current_exe()
        .ok()
        .and_then(|exe| exe.parent().map(|p| p.join("plugin.json")))
        .unwrap_or_else(|| std::path::PathBuf::from("plugin.json"));

    eprintln!("ğŸ” Reading plugin.json from: {:?}", config_path);

    let config_content = std::fs::read_to_string(&config_path).map_err(|e| {
        anyhow::anyhow!("Failed to read plugin.json: {}. Path: {:?}", e, config_path)
    })?;

    eprintln!("ğŸ“„ plugin.json content:\n{}", config_content);

    let config: PluginConfig = serde_json::from_str(&config_content)
        .map_err(|e| anyhow::anyhow!("Failed to parse plugin.json: {}", e))?;

    let plugin_no = config.plugin_no;
    let version = config.version;
    let priority = config.priority;
    let args = PluginArgs::parse();

    // åˆå§‹åŒ–æ—¥å¿— / Initialize logging
    let log_level = if args.debug {
        tracing::Level::DEBUG
    } else {
        match args.log_level.to_lowercase().as_str() {
            "trace" => tracing::Level::TRACE,
            "debug" => tracing::Level::DEBUG,
            "info" => tracing::Level::INFO,
            "warn" => tracing::Level::WARN,
            "error" => tracing::Level::ERROR,
            _ => tracing::Level::INFO,
        }
    };

    tracing_subscriber::fmt()
        .with_max_level(log_level)
        .with_target(args.debug) // åœ¨ debug æ¨¡å¼ä¸‹æ˜¾ç¤ºç›®æ ‡æ¨¡å—
        .with_thread_ids(args.debug) // åœ¨ debug æ¨¡å¼ä¸‹æ˜¾ç¤ºçº¿ç¨‹ ID
        .with_line_number(args.debug) // åœ¨ debug æ¨¡å¼ä¸‹æ˜¾ç¤ºè¡Œå·
        .init();

    if args.debug {
        info!("ğŸ› Debug mode enabled");
    }
    info!("ğŸ“Š Log level: {:?}", log_level);

    // ä»æ’ä»¶ç¼–å·æå–åç§° / Extract name from plugin number
    let name = plugin_no
        .strip_prefix("wk.plugin.")
        .or_else(|| plugin_no.strip_prefix("v.plugin."))
        .unwrap_or(&plugin_no);

    let socket_path = args
        .socket
        .unwrap_or_else(|| format!("./plugins/{}.sock", name));

    // ä½¿ç”¨ Protobuf åè®® / Use Protobuf protocol
    let protocol = crate::plugin::protocol::ProtocolFormat::Protobuf;

    info!(
        "ğŸš€ {} v{} starting... (priority: {}, protocol: {:?})",
        plugin_no, version, priority, protocol
    );
    info!("ğŸ“¡ Socket path: {}", socket_path);

    let plugin = P::new();
    let wrapper = PluginWrapper {
        plugin,
        name: Box::leak(plugin_no.into_boxed_str()),
        version: Box::leak(version.into_boxed_str()),
        priority,
        capabilities: config.capabilities,
        protocol,
    };

    let mut client = PluginClient::new(socket_path, wrapper);
    client.run_forever_with_ctrlc().await
}

// ============================================================================
// è‡ªåŠ¨äº‹ä»¶åˆ†å‘ / Auto Event Dispatch
// ============================================================================

/// åˆ†å‘å­˜å‚¨äº‹ä»¶åˆ°å¯¹åº”çš„ç›‘å¬å™¨æ–¹æ³• / Dispatch storage event to listener method
///
/// è‡ªåŠ¨è§£ç  Protobuf æ¶ˆæ¯å¹¶è°ƒç”¨å¯¹åº”çš„æ–¹æ³•
/// Automatically decodes Protobuf message and calls corresponding method
pub async fn dispatch_storage_event(
    listener: &mut dyn StorageEventListener,
    event: &crate::plugin::protocol::EventMessage,
) -> Result<crate::plugin::protocol::EventResponse> {
    use crate::plugin::protocol::*;
    use prost::Message;

    match event.event_type.as_str() {
        "storage.message.save" => {
            let req = SaveMessageRequest::decode(event.payload.as_slice())?;
            let resp = listener.storage_message_save(&req).await?;
            Ok(EventResponse {
                status: "ok".to_string(),
                flow: "continue".to_string(),
                data: resp.encode_to_vec(),
                error: String::new(),
            })
        }
        "storage.offline.save" => {
            let req = SaveOfflineMessageRequest::decode(event.payload.as_slice())?;
            let resp = listener.storage_offline_save(&req).await?;
            Ok(EventResponse {
                status: "ok".to_string(),
                flow: "continue".to_string(),
                data: resp.encode_to_vec(),
                error: String::new(),
            })
        }
        "storage.offline.pull" => {
            let req = PullOfflineMessagesRequest::decode(event.payload.as_slice())?;
            let resp = listener.storage_offline_pull(&req).await?;
            Ok(EventResponse {
                status: "ok".to_string(),
                flow: "continue".to_string(),
                data: resp.encode_to_vec(),
                error: String::new(),
            })
        }
        "storage.offline.ack" => {
            let req = AckOfflineMessagesRequest::decode(event.payload.as_slice())?;
            let resp = listener.storage_offline_ack(&req).await?;
            Ok(EventResponse {
                status: "ok".to_string(),
                flow: "continue".to_string(),
                data: resp.encode_to_vec(),
                error: String::new(),
            })
        }
        "storage.offline.count" => {
            let req = CountOfflineMessagesRequest::decode(event.payload.as_slice())?;
            let resp = listener.storage_offline_count(&req).await?;
            Ok(EventResponse {
                status: "ok".to_string(),
                flow: "continue".to_string(),
                data: resp.encode_to_vec(),
                error: String::new(),
            })
        }
        "storage.room.add_member" => {
            let req = AddRoomMemberRequest::decode(event.payload.as_slice())?;
            let resp = listener.storage_room_add_member(&req).await?;
            Ok(EventResponse {
                status: "ok".to_string(),
                flow: "continue".to_string(),
                data: resp.encode_to_vec(),
                error: String::new(),
            })
        }
        "storage.room.remove_member" => {
            let req = RemoveRoomMemberRequest::decode(event.payload.as_slice())?;
            let resp = listener.storage_room_remove_member(&req).await?;
            Ok(EventResponse {
                status: "ok".to_string(),
                flow: "continue".to_string(),
                data: resp.encode_to_vec(),
                error: String::new(),
            })
        }
        "storage.room.list_members" => {
            let req = GetRoomMembersRequest::decode(event.payload.as_slice())?;
            let resp = listener.storage_room_list_members(&req).await?;
            Ok(EventResponse {
                status: "ok".to_string(),
                flow: "continue".to_string(),
                data: resp.encode_to_vec(),
                error: String::new(),
            })
        }
        _ => Err(anyhow::anyhow!(
            "Unknown storage event: {}",
            event.event_type
        )),
    }
}

// ============================================================================
// é€šç”¨æ’ä»¶è¿è¡Œå™¨ / Generic Plugin Runner
// ============================================================================

/// æ’ä»¶å…ƒæ•°æ® / Plugin metadata
struct PluginMetadata {
    plugin_no: String,
    version: String,
    priority: i32,
    capabilities: Vec<String>,
    socket_path: String,
    protocol: crate::plugin::protocol::ProtocolFormat,
}

/// åˆå§‹åŒ–æ’ä»¶è¿è¡Œç¯å¢ƒ / Initialize plugin runtime environment
fn init_plugin_runtime() -> Result<PluginMetadata> {
    // è¯»å– plugin.json é…ç½® / Read plugin.json configuration
    let config_path = std::env::current_exe()
        .ok()
        .and_then(|exe| exe.parent().map(|p| p.join("plugin.json")))
        .unwrap_or_else(|| std::path::PathBuf::from("plugin.json"));

    eprintln!("ğŸ” Reading plugin.json from: {:?}", config_path);

    let config_content = std::fs::read_to_string(&config_path).map_err(|e| {
        anyhow::anyhow!("Failed to read plugin.json: {}. Path: {:?}", e, config_path)
    })?;

    eprintln!("ğŸ“„ plugin.json content:\n{}", config_content);

    let plugin_config: PluginConfig = serde_json::from_str(&config_content)
        .map_err(|e| anyhow::anyhow!("Failed to parse plugin.json: {}", e))?;

    let plugin_no = plugin_config.plugin_no;
    let version = plugin_config.version;
    let priority = plugin_config.priority;
    let capabilities = plugin_config.capabilities;
    let args = PluginArgs::parse();

    // åˆå§‹åŒ–æ—¥å¿— / Initialize logging
    let log_level = if args.debug {
        tracing::Level::DEBUG
    } else {
        match args.log_level.to_lowercase().as_str() {
            "trace" => tracing::Level::TRACE,
            "debug" => tracing::Level::DEBUG,
            "info" => tracing::Level::INFO,
            "warn" => tracing::Level::WARN,
            "error" => tracing::Level::ERROR,
            _ => tracing::Level::INFO,
        }
    };

    tracing_subscriber::fmt()
        .with_max_level(log_level)
        .with_target(args.debug)
        .with_thread_ids(args.debug)
        .with_line_number(args.debug)
        .init();

    if args.debug {
        info!("ğŸ› Debug mode enabled");
    }
    info!("ğŸ“Š Log level: {:?}", log_level);

    // ä»æ’ä»¶ç¼–å·æå–åç§° / Extract name from plugin number
    let name = plugin_no
        .strip_prefix("wk.plugin.")
        .or_else(|| plugin_no.strip_prefix("v.plugin."))
        .unwrap_or(&plugin_no);

    let socket_path = args
        .socket
        .unwrap_or_else(|| format!("./plugins/{}.sock", name));

    let protocol = crate::plugin::protocol::ProtocolFormat::Protobuf;

    info!(
        "ğŸš€ {} v{} starting... (priority: {}, protocol: {:?})",
        plugin_no, version, priority, protocol
    );
    info!("ğŸ“¡ Socket path: {}", socket_path);

    Ok(PluginMetadata {
        plugin_no,
        version,
        priority,
        capabilities,
        socket_path,
        protocol,
    })
}

// ============================================================================
// å­˜å‚¨æ’ä»¶ä¸“ç”¨è¿è¡Œå™¨ / Storage Plugin Runner
// ============================================================================

/// è¿è¡Œå­˜å‚¨æ’ä»¶æœåŠ¡å™¨ / Run storage plugin server
///
/// ä¸“é—¨ä¸º StorageEventListener è®¾è®¡çš„è¿è¡Œå‡½æ•°ï¼Œä¸éœ€è¦å®ç° Plugin trait
/// Dedicated runner for StorageEventListener, no need to implement Plugin trait
///
/// # ç±»å‹å‚æ•° / Type Parameters
///
/// * `L` - å®ç°äº† `StorageEventListener` trait çš„ç›‘å¬å™¨ç±»å‹
/// * `C` - é…ç½®ç±»å‹ï¼Œå¿…é¡»å®ç° Default å’Œ DeserializeOwned
///
/// # ç¤ºä¾‹ / Example
///
/// ```no_run
/// use v::plugin::pdk::{StorageEventListener, run_storage_server};
///
/// #[tokio::main]
/// async fn main() -> anyhow::Result<()> {
///     run_storage_server::<MyStorageListener, MyConfig>(
///         |config| MyStorageListener::new(config)
///     ).await
/// }
/// ```
pub async fn run_storage_server<L, C, F>(create_listener: F) -> Result<()>
where
    L: StorageEventListener + 'static,
    C: Default + DeserializeOwned,
    F: FnOnce(C) -> Result<L>,
{
    let metadata = init_plugin_runtime()?;

    // åˆ›å»ºç›‘å¬å™¨ / Create listener
    let user_config = C::default();
    let listener = create_listener(user_config)?;

    let wrapper = StoragePluginWrapper {
        listener: Box::new(listener),
        name: Box::leak(metadata.plugin_no.into_boxed_str()),
        version: Box::leak(metadata.version.into_boxed_str()),
        priority: metadata.priority,
        capabilities: metadata.capabilities,
        protocol: metadata.protocol,
    };

    let mut client = PluginClient::new(metadata.socket_path, wrapper);
    client.run_forever_with_ctrlc().await
}

/// å­˜å‚¨æ’ä»¶åŒ…è£…å™¨ / Storage plugin wrapper
struct StoragePluginWrapper {
    listener: Box<dyn StorageEventListener>,
    name: &'static str,
    version: &'static str,
    priority: i32,
    capabilities: Vec<String>,
    protocol: crate::plugin::protocol::ProtocolFormat,
}

impl PluginHandler for StoragePluginWrapper {
    fn name(&self) -> &'static str {
        self.name
    }

    fn version(&self) -> &'static str {
        self.version
    }

    fn capabilities(&self) -> Vec<String> {
        self.capabilities.clone()
    }

    fn priority(&self) -> i32 {
        self.priority
    }

    fn config(&mut self, _cfg: &str) -> Result<()> {
        // å­˜å‚¨æ’ä»¶çš„é…ç½®é€šè¿‡æ„é€ å‡½æ•°ä¼ é€’ï¼Œè¿™é‡Œä¸å¤„ç†
        // Storage plugin config is passed via constructor, not handled here
        Ok(())
    }

    fn on_event(
        &mut self,
        event: &crate::plugin::protocol::EventMessage,
    ) -> Result<crate::plugin::protocol::EventResponse> {
        // ä½¿ç”¨ tokio çš„ block_in_place åœ¨åŒæ­¥ä¸Šä¸‹æ–‡ä¸­è¿è¡Œå¼‚æ­¥ä»£ç 
        // Use tokio's block_in_place to run async code in sync context
        tokio::task::block_in_place(|| {
            tokio::runtime::Handle::current()
                .block_on(dispatch_storage_event(&mut *self.listener, event))
        })
    }

    fn protocol(&self) -> crate::plugin::protocol::ProtocolFormat {
        self.protocol
    }
}

// ============================================================================
// è®¤è¯æ’ä»¶ä¸“ç”¨è¿è¡Œå™¨ / Auth Plugin Runner
// ============================================================================

/// è¿è¡Œè®¤è¯æ’ä»¶æœåŠ¡å™¨ / Run auth plugin server
///
/// ä¸“é—¨ä¸º AuthEventListener è®¾è®¡çš„è¿è¡Œå‡½æ•°ï¼Œä¸éœ€è¦å®ç° Plugin trait
/// Dedicated runner for AuthEventListener, no need to implement Plugin trait
///
/// # ç±»å‹å‚æ•° / Type Parameters
///
/// * `L` - å®ç°äº† `AuthEventListener` trait çš„ç›‘å¬å™¨ç±»å‹
/// * `C` - é…ç½®ç±»å‹ï¼Œå¿…é¡»å®ç° Default å’Œ DeserializeOwned
///
/// # ç¤ºä¾‹ / Example
///
/// ```no_run
/// use v::plugin::pdk::{AuthEventListener, run_auth_server};
///
/// #[tokio::main]
/// async fn main() -> anyhow::Result<()> {
///     run_auth_server::<MyAuthListener, MyConfig>(
///         |config| MyAuthListener::new(config)
///     ).await
/// }
/// ```
pub async fn run_auth_server<L, C, F>(create_listener: F) -> Result<()>
where
    L: AuthEventListener + 'static,
    C: Default + DeserializeOwned,
    F: FnOnce(C) -> Result<L>,
{
    let metadata = init_plugin_runtime()?;

    // åˆ›å»ºç›‘å¬å™¨ / Create listener
    let user_config = C::default();
    let listener = create_listener(user_config)?;

    let wrapper = AuthPluginWrapper {
        listener: Box::new(listener),
        name: Box::leak(metadata.plugin_no.into_boxed_str()),
        version: Box::leak(metadata.version.into_boxed_str()),
        priority: metadata.priority,
        capabilities: metadata.capabilities,
        protocol: metadata.protocol,
    };

    let mut client = PluginClient::new(metadata.socket_path, wrapper);
    client.run_forever_with_ctrlc().await
}

/// è®¤è¯æ’ä»¶åŒ…è£…å™¨ / Auth plugin wrapper
struct AuthPluginWrapper {
    listener: Box<dyn AuthEventListener>,
    name: &'static str,
    version: &'static str,
    priority: i32,
    capabilities: Vec<String>,
    protocol: crate::plugin::protocol::ProtocolFormat,
}

impl PluginHandler for AuthPluginWrapper {
    fn name(&self) -> &'static str {
        self.name
    }

    fn version(&self) -> &'static str {
        self.version
    }

    fn capabilities(&self) -> Vec<String> {
        self.capabilities.clone()
    }

    fn priority(&self) -> i32 {
        self.priority
    }

    fn config(&mut self, _cfg: &str) -> Result<()> {
        // è®¤è¯æ’ä»¶çš„é…ç½®é€šè¿‡æ„é€ å‡½æ•°ä¼ é€’ï¼Œè¿™é‡Œä¸å¤„ç†
        // Auth plugin config is passed via constructor, not handled here
        Ok(())
    }

    fn on_event(
        &mut self,
        event: &crate::plugin::protocol::EventMessage,
    ) -> Result<crate::plugin::protocol::EventResponse> {
        // ä½¿ç”¨ tokio çš„ block_in_place åœ¨åŒæ­¥ä¸Šä¸‹æ–‡ä¸­è¿è¡Œå¼‚æ­¥ä»£ç 
        // Use tokio's block_in_place to run async code in sync context
        tokio::task::block_in_place(|| {
            tokio::runtime::Handle::current()
                .block_on(dispatch_auth_event(&mut *self.listener, event))
        })
    }

    fn protocol(&self) -> crate::plugin::protocol::ProtocolFormat {
        self.protocol
    }
}

/// åˆ†å‘è®¤è¯äº‹ä»¶åˆ°å¯¹åº”çš„ç›‘å¬å™¨æ–¹æ³• / Dispatch auth event to listener method
pub async fn dispatch_auth_event(
    listener: &mut dyn AuthEventListener,
    event: &crate::plugin::protocol::EventMessage,
) -> Result<crate::plugin::protocol::EventResponse> {
    use crate::plugin::protocol::*;
    use prost::Message;

    match event.event_type.as_str() {
        "auth.login" => {
            let req = LoginRequest::decode(event.payload.as_slice())?;
            let resp = listener.auth_login(&req).await?;
            Ok(EventResponse {
                status: "ok".to_string(),
                flow: "continue".to_string(),
                data: resp.encode_to_vec(),
                error: String::new(),
            })
        }
        "auth.logout" => {
            let req = LogoutRequest::decode(event.payload.as_slice())?;
            let resp = listener.auth_logout(&req).await?;
            Ok(EventResponse {
                status: "ok".to_string(),
                flow: "continue".to_string(),
                data: resp.encode_to_vec(),
                error: String::new(),
            })
        }
        "auth.kick_out" => {
            let req = KickOutRequest::decode(event.payload.as_slice())?;
            let resp = listener.auth_kick_out(&req).await?;
            Ok(EventResponse {
                status: "ok".to_string(),
                flow: "continue".to_string(),
                data: resp.encode_to_vec(),
                error: String::new(),
            })
        }
        "auth.renew_token" => {
            let req = RenewTokenRequest::decode(event.payload.as_slice())?;
            let resp = listener.auth_renew_token(&req).await?;
            Ok(EventResponse {
                status: "ok".to_string(),
                flow: "continue".to_string(),
                data: resp.encode_to_vec(),
                error: String::new(),
            })
        }
        "auth.token_replaced" => {
            let req = TokenReplacedRequest::decode(event.payload.as_slice())?;
            let resp = listener.auth_token_replaced(&req).await?;
            Ok(EventResponse {
                status: "ok".to_string(),
                flow: "continue".to_string(),
                data: resp.encode_to_vec(),
                error: String::new(),
            })
        }
        "auth.ban_user" => {
            let req = BanUserRequest::decode(event.payload.as_slice())?;
            let resp = listener.auth_ban_user(&req).await?;
            Ok(EventResponse {
                status: "ok".to_string(),
                flow: "continue".to_string(),
                data: resp.encode_to_vec(),
                error: String::new(),
            })
        }
        _ => Err(anyhow::anyhow!("Unknown auth event: {}", event.event_type)),
    }
}
